--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,19 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Paso Uno
-email: abysamross@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  One foot in front of the other
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username:
-github_username:  abysamross
+# title:
+# email:
+# description: >- # this means to ignore newlines until "baseurl:"
+# baseurl: "" # the subpath of your site, e.g. /blog
+# url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username:
+# github_username:
 
 # Build settings
-theme: jekyll-theme-hacker
-plugins:
-  - jekyll-feed
+# theme: jekyll-theme-hacker
+# plugins:
+#   - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -51,3 +50,9 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+title: Paso Uno
+description: One foot in front of the other
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme
